Limpezas de imports e verificacoes de nulos impossiveis.